fix/update scrollbars

--- a/app/packages/flashlight/src/styles.module.css
+++ b/app/packages/flashlight/src/styles.module.css
@@ -47,30 +47,6 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-
-  --light-color: var(--fo-palette-text-tertiary);
-  --dark-color: var(--fo-palette-background-level2);
-
-  scrollbar-color: var(--light-color) var(--dark-color);
-}
-
-.flashlight::-webkit-scrollbar {
-  width: 16px;
-}
-
-.flashlight::-webkit-scrollbar-track {
-  border: solid 4px transparent var(--light-color);
-}
-
-.flashlight::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 10px 10px transparent;
-  border: solid 4px transparent;
-  border-radius: 16px;
-  transition: box-shadow linear 0.5s;
-}
-
-.flashlight:hover::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 10px 10px var(--light-color);
 }
 
 .flashlightContainer {
@@ -113,4 +89,41 @@
 
 .flashlightSection.flashlightSectionHidden > div > div {
   display: none;
+}
+
+.scrollbar {
+  --scrollbar-color: var(--fo-palette-text-tertiary);
+}
+
+@-moz-document url-prefix() {
+  .scrollbar {
+    scrollbar-color: var(--scrollbar-color) transparent;
+    scrollbar-width: thin;
+  }
+}
+
+.scrollbar::-webkit-scrollbar {
+  height: 14px;
+  width: 14px;
+}
+
+.scrollbar::-webkit-scrollbar {
+  height: 14px;
+  width: 14px;
+}
+
+.scrollbar::-webkit-scrollbar-corner {
+  background: transparent;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 14px 14px transparent;
+  height: 14px;
+  width: 14px;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  border: solid 3px transparent;
+  border-radius: 0;
+  box-shadow: inset 0 0 8px 8px var(--scrollbar-color);
 }
